--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,7 +1,5 @@
 /* Global properties ======================================================== */
 html, body {width:100%; height:100%; padding:0; margin:0;}
-.ic {border:0;float:left;background:#fff;color:#f00;width:50%;line-height:10px;font-size:10px;margin:-220% 0 0 0;overflow:hidden;padding:0}
-
 
 body { 	 
 	font: 12px/22px Arial, Helvetica, sans-serif;
@@ -9,7 +7,10 @@ body {
 	min-width:970px;
 	background: url(../images/bg.jpg) center 0 repeat;
 }
-.main {width:960px; margin:0 auto;}
+.main {
+	width:960px;
+	margin:0 auto;
+}
 /***********************************************************************/
 
 a {text-decoration:none; cursor:pointer;}
@@ -68,9 +69,9 @@ ul.list-2 li a:hover {text-decoration:underline;}
 .img-indent {float:left; margin:0 40px 0px 0;}	
 .last {margin-right:0px !important;}
 
-.top-1 {margin-top:24px;}
+.top-1 {margin-top:10px;}
 .top-2 {margin-top:18px;}
-.top-3 {margin-top:16px;}
+.top-3 {margin-top:10px;}
 .top-4 {margin-top:60px;}
 .top-5 {margin-top:37px;}
 .top-6 {margin-top:17px;}
@@ -103,7 +104,8 @@ ul.menu {overflow:hidden;}
 ul.menu li {float: left; line-height:24px; background:url(../images/menu-li.jpg) 0 0 no-repeat; margin:10px 0 11px 0; padding: 13px 47px 12px 47px; }
 ul.menu li:first-child {background:transparent;}
 ul.menu li a {font-size:18px; line-height:24px; color:#0f0c0c; display:inline-block; }
-ul.menu li a:hover, ul.menu li.active a {color: #8f5720;}
+ul.menu li a:hover {color: #8f5720; border-top: 2px solid #8f5720;}
+ul.menu li.active a {color: #8f5720; border-bottom: 2px solid #8f5720}
 ul.menu li:last-child {float: right}
 
 /*********************************content*************************************/
@@ -116,15 +118,34 @@ ul.menu li:last-child {float: right}
 	float: right;
 	margin-right: 20px;
 }
+
+.title-Post{
+	color: #9f6124;
+}
+
+.text-Post{
+	color: #343421;
+}
+
 .content-subpages {padding-top:25px !important;}
-.header-content {width:100%; background:url(../images/header-content.jpg) center bottom repeat; margin:0 auto; position:relative; z-index:99; margin-top:-25px; padding-bottom:36px;}
+
+.header-content {
+	width:100%;
+	background:url(../images/header-content.jpg) center bottom repeat;
+	margin:0 auto;
+	position:relative;
+	z-index:99;
+	margin-top:-25px;
+
+}
+
 .header-subpages {padding-bottom:65px !important;}
 
 .img-radius {border-radius:3px;}
 .border-1 {background:url(../images/border-1.jpg) right 0 repeat-y;}
 .border-2 {background:url(../images/border-2.gif) right 0 repeat-y;}
 
-.block-1 {padding-top:70px; width:320px; float:left; text-align:center;}
+.block-1 {padding-top:50px; width:320px; float:left; text-align:center;}
 .block-1>div {padding:10px 30px 15px 30px; margin-top:14px;}
 
 #content>div {width:880px; margin:0 auto;}
@@ -152,56 +173,11 @@ ul.menu li:last-child {float: right}
 blockquote {color:#e88800; padding-left:15px; display:inline-block;}
 
 /****************************footer************************/
-footer {width:880px; margin:0 auto; position:relative; overflow:hidden; text-align:center; padding:43px 0 40px 0;}
-
-/**********************form**********************/
-.map {width:240px; height:151px; margin:25px 0 0 0;}
-.map iframe {width:240px; height:151px; border-radius:7px;}
-dl {margin:22px 0px 0 0px; float:left;}
-dl dt {}
-dl dd span { display:block; width:67px; float:left;}
-dl dd {}
-dl dd a {}
-#form { margin: 11px 0 0px 0px; width:560px; }
-#form input {
-	border-bottom:#fff 1px solid;
-	border-top:#8b8c8d 1px solid;
-	border-left:#cfd0d2 1px solid;
-	border-right:#cfd0d2 1px solid;
-	background:url(../images/form-bg.jpg) 0 0 repeat-x #e1e2e4 ; 
-	border-radius:7px;
-	font: 12px Arial, Helvetica, sans-serif;
-	color:#8f8b8c; 
-	padding:5px 10px 6px 10px;
-    outline: medium none;
-    width: 260px;
-	height:15px;
-	float:left;
-}
-#form textarea {
-	border-bottom:#fff 1px solid;
-	border-top:#8b8c8d 1px solid;
-	border-left:#cfd0d2 1px solid;
-	border-right:#cfd0d2 1px solid;
-	background:url(../images/form-bg.jpg) 0 0 repeat-x #e1e2e4 ; 
-	border-radius:7px;
-	font: 12px Arial, Helvetica, sans-serif;
-	color:#8f8b8c; 
-    height: 268px;
-    outline: medium none;
-    overflow: auto;
-    padding: 5px 0px 0px 10px;
-    width: 480px;
-	resize:none;
-	margin:0px 0 0 0;
-	float:left;
-}
-#form label {
+footer {
+	width:880px;
+	margin:0 auto;
 	position:relative;
 	overflow:hidden;
-    display: block;
-    min-height:33px;
+	text-align:center;
+	padding:43px 0 40px 0;
 }
-#form label strong {font-weight:normal; float:left; display:inline-block; width:68px; padding-top:2px;}
-.btns {text-align:right; width:560px; padding-top:13px;}
-.btns a {display:inline-block; margin:0 20px 0 10px;}
