--- a/public/assets/css/styleLogin.css
+++ b/public/assets/css/styleLogin.css
@@ -121,7 +121,7 @@ padding: 0;
 margin: 0;
 }
 
-.inputs input{
+textarea, .inputs input{
 background: #f1f1f1;
 padding: 15px 15px 15px 30px;
 margin: 0 0 10px 0;
