--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -181,3 +181,36 @@ footer {
 	text-align:center;
 	padding:43px 0 40px 0;
 }
+
+/****************************table in admin************************/
+table {
+
+	border-spacing: 2px 10px;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: bold;
+}
+th {
+	padding: 10px 20px;
+	background: #56433D;
+	color: #F9C941;
+	border-right: 2px solid;
+	font-size: 0.9em;
+}
+th:first-child {
+	text-align: left;
+}
+th:last-child {
+	border-right: none;
+}
+
+tr {
+	border: 2px solid #56433D;
+}
+
+td {
+	vertical-align: middle;
+	padding: 10px;
+	font-size: 14px;
+	text-align: center;
+	border: 2px solid #56433D;
+}
